# vela

./: .gitignore  Cargo.toml  README.md  SECURITY.md  action.yml  fly.hub.tmp.toml  install.sh
clients/python/: README.md  pyproject.toml  vela_loader.py  vela_reducer.py  vela_verify_log.py
clients/python/tests/: test_loader_frontiers_v2.py
clients/python/vela_agent/: __init__.py  bench.py  client.py  primitives.py  reader.py  trajectory.py
clients/python/vela_agent/examples/: __init__.py  astabench_protein_fold.py  correction_proposer.py  external_agent_contribution.py  literature_scout.py  real_bench_erdos.py  replication_checker.py
clients/python/vela_agent/tests/: test_client.py  test_primitives.py
clients/python/vela_state.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crates/vela-atlas/: Cargo.toml  README.md
crates/vela-atlas/src/: lib.rs
crates/vela-cli/: Cargo.toml
crates/vela-cli/src/: atlas_adapters.rs  campaign.rs  cli.rs  cli_admin.rs  cli_agents.rs  cli_atlas.rs  cli_bridge_kit.rs  cli_campaign.rs  cli_causal.rs  cli_check.rs  cli_claim.rs  cli_commands.rs  cli_diff_pack.rs  cli_engine.rs  cli_experiment.rs  cli_export.rs  cli_federation.rs  cli_finding.rs  cli_frontier.rs  cli_identity.rs  cli_lean.rs  cli_log_verify.rs  cli_owner_rotate.rs  cli_policy.rs  cli_proof.rs  cli_read.rs  cli_registry.rs  cli_sidon.rs  cli_source_fetch.rs  cli_write.rs  lib.rs  main.rs  review_work.rs  serve.rs  solve_diff_triangle.rs  ui.rs  workbench.rs
crates/vela-cli/src/atlas/: atlas_adapters.rs  mod.rs
crates/vela-cli/src/cli/: checks.rs  frontier_audit.rs  frontier_diff.rs  governance.rs  identity.rs  json_edit.rs  lifecycle.rs  links.rs  mod.rs  output.rs  records.rs  session.rs  surface.rs  tests.rs
crates/vela-cli/src/config/: cli_admin.rs  cli_identity.rs  git_publish.rs  mod.rs
crates/vela-cli/src/discovery/: campaign.rs  mod.rs
crates/vela-cli/src/frontier/: cli_frontier.rs  cli_read.rs  cli_registry.rs  mod.rs
crates/vela-cli/src/server/: cli_commands.rs  cli_engine.rs  http.rs  mod.rs  serve.rs  tools.rs
crates/vela-cli/src/tools/: cli_check.rs  cli_lean.rs  cli_log_verify.rs  cli_proof.rs  mod.rs
crates/vela-cli/src/write/: cli_claim.rs  cli_finding.rs  cli_write.rs  mod.rs  review_work.rs  solve_diff_triangle.rs
crates/vela-cli/tests/: aliases.rs
crates/vela-constellation/: Cargo.toml  README.md
crates/vela-constellation/src/: lib.rs
crates/vela-edge/: Cargo.toml
crates/vela-edge/embedded/carina-schemas/: agent_attestation.schema.json  atlas.schema.json  confidence.schema.json  constellation.schema.json  diff.schema.json  evidence.schema.json  finding.schema.json  mechanism.schema.json  owner_epoch_chain.schema.json  owner_rotate_proposal.schema.json  (+6 more)
crates/vela-edge/src/: adoption_log.rs  adoption_transcript.rs  agent_attestation.rs  agent_bench.rs  aggregate.rs  artifact_audit.rs  artifact_to_state.rs  benchmark.rs  bridge.rs  calibration.rs  carina_validate.rs  causal_reasoning.rs  checkpoint.rs  citation.rs  code_executor.rs  conformance.rs  correction_return.rs  counterfactual.rs  credit.rs  crossref.rs  decision.rs  deliverable_grade.rs  dependency_oracle.rs  diff_pack_promote.rs  diff_pack_release.rs  discord.rs  discord_compute.rs  doc_render.rs  doctor.rs  entity_resolve.rs  evaluation_record.rs  export.rs  frontier_health.rs  frontier_incident.rs  frontier_release.rs  frontier_task.rs  hub_spec.rs  impact.rs  incremental_ingest.rs  index_db.rs  (+29 more)
crates/vela-edge/tests/: artifact_to_state.rs  carina_examples.rs  frontier_task.rs  gate_conformance.rs  impact.rs  packet_load.rs  review_packet.rs  reviewer_identity.rs  runtime_adapters.rs  source_adapters.rs  source_inbox.rs  state_integrity.rs
crates/vela-hub/: Cargo.toml  Dockerfile  fly.hub-2.toml  fly.hub-eu.toml  fly.toml
crates/vela-hub/src/: db.rs  git_ingest.rs  html.rs  lib.rs  main.rs  mcp_host.rs  storage.rs
crates/vela-hub/tests/: event_kind_transparency.rs
crates/vela-protocol/: Cargo.toml
crates/vela-protocol-core/: Cargo.toml
crates/vela-protocol-core/src/: conjecture.rs  lib.rs  proof_packet.rs
crates/vela-protocol-wasm/: Cargo.toml
crates/vela-protocol-wasm/src/: lib.rs
crates/vela-protocol/examples/: regenesis_migrate.rs
crates/vela-protocol/src/: access_tier.rs  activity.rs  adoption_log.rs  adoption_transcript.rs  agent_bench.rs  ancestor_closure.rs  anchor.rs  artifact_audit.rs  artifact_to_state.rs  atlas.rs  attempt.rs  benchmark.rs  boundary.rs  bridge.rs  bundle.rs  canonical.rs  carina_validate.rs  causal_graph.rs  checkpoint.rs  citation.rs  cli.rs  cli_bridge_kit.rs  cli_causal.rs  cli_check.rs  cli_commands.rs  cli_diff_pack.rs  cli_federation.rs  cli_finding.rs  cli_frontier.rs  cli_lean.rs  cli_owner_rotate.rs  cli_registry.rs  cli_source_fetch.rs  cli_style.rs  code_executor.rs  confidence.rs  conformance.rs  conjecture.rs  contradiction.rs  correction_return.rs  (+92 more)
crates/vela-protocol/tests/: artifact_to_state.rs  bbb_populate_events.rs  canonical_hashing_conformance.rs  carina_examples.rs  cascade_replay_at_scale.rs  cli_release_contract.rs  cross_frontier_dep_persistence.rs  cross_impl_reducer_fixtures.rs  evidence_atom_locator_repair.rs  evidence_ci.rs  finding_entity_resolve.rs  finding_span_repair.rs  frontier_policy.rs  frontier_repo.rs  frontier_task.rs  gate_conformance.rs  impact.rs  multi_actor_joint_signature.rs  proposal_signature_parity.rs  replay_perf.rs  replication_prediction_deposit.rs  review_packet.rs  reviewer_identity.rs  runtime_adapters.rs  sidon_profile_conformance.rs  sidon_profile_frontier_conformance.rs  sidon_profile_kernel_conformance.rs  sidon_profile_producer_conformance.rs  source_adapters.rs  source_inbox.rs  state_integrity.rs  trust_invariants.rs  workbench_review_parity.rs
crates/vela-relay/: Cargo.toml  README.md
crates/vela-relay/src/: lib.rs  main.rs  paper.rs
crates/vela-search/: Cargo.toml  README.md
crates/vela-search/src/: lib.rs
crates/vela-verify/: Cargo.toml  README.md
crates/vela-verify/src/: lib.rs
crates/vela-verify/tests/: invalid_corpus.rs
(+453 files in other folders)
