[workspace]
members = [
    "crates/vela-protocol",
    "crates/vela-edge",
    "crates/vela-protocol-core",
    "crates/vela-cli",
    "crates/vela-hub",
    # v0.78.2: vela-atlas carved out as a real crate. The
    # namespace-stubs/vela-atlas package stays in place (it's
    # not in this list) and `cargo publish` of crates/vela-atlas
    # at 0.78.0 supersedes the 0.0.0 stub.
    # v0.81.1: vela-constellation carved out as a real crate.
    # The namespace-stubs/vela-constellation isn't a thing yet
    # (we never reserved it; this is a fresh publish slot for
    # later cycles).
    # v0.123: vela-relay carved out as a real crate + binary.
    # The namespace-stubs/vela-relay v0.0.0 publish stays in the
    # repo history; cargo publish of crates/vela-relay at 0.123.0
    # supersedes the stub. Library re-exports source_adapters /
    # runtime_adapters from vela-protocol; binary lists the four
    # adapter shapes (see docs/RELAY.md).
    # v0.149: vela-search ships the build-time index over
    # registered frontiers. Pure derived view, not authority;
    # the canonical state stays in registry + frontier event
    # logs. See docs/SEARCH.md.
    # vela-verify: frozen, dependency-light exact verifiers for
    # combinatorial / coding-theory witnesses. The reference verifier
    # registry the gate and `vela reproduce` build on.
    "crates/vela-verify",
]
# Reserved crates.io namespace names for the ten-year ecosystem ontology
# (kept here for the record now that the placeholder namespace-stubs/ dirs
# are removed — the crates.io reservations stand independent of the local
# stubs): vela-navigator, vela-registry, vela-canopus, vela-observatory,
# constellate-studio, constellate-commons. (vela-atlas became a real crate at
# v0.78.2 and vela-relay at v0.123 — both in `members` above.)
resolver = "3"

[workspace.package]
version = "0.700.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vela-science/vela"
homepage = "https://github.com/vela-science/vela"
# Per-crate `publish` is set explicitly: `vela-protocol` and `vela-cli`
# publish to crates.io; `vela-scientist` and `vela-hub` stay
# unpublished (internal agent layer and server-only hub).
publish = false

[workspace.dependencies]
# Shared dependencies
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ctrlc = { version = "3", features = ["termination"] }
libc = "0.2"
# rustls-tls (not the default native-tls) so the tree builds a single
# TLS stack — sqlx already uses rustls — and drops the openssl C build.
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.18"
hex = "0.4"
regex = "1"
urlencoding = "2"
colored = "3"
axum = "0.8"
async-stream = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }
# Workspace default is sqlite-only (used by vela-protocol's index_db).
# vela-hub re-adds the heavier `postgres` driver in its own manifest, so
# the protocol library and its pure consumers don't build it.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
toml = "0.8"
quick-xml = "0.37"
tokio-stream = "0.1"
futures = "0.3"
tempfile = "3"

# Internal crates. `version` is required so cargo publish can resolve
# the dep against crates.io; `path` is used for in-workspace builds.
vela-protocol = { path = "crates/vela-protocol", version = "0.700.0" }
vela-protocol-core = { path = "crates/vela-protocol-core", version = "0.700.0" }
vela-verify = { path = "crates/vela-verify", version = "0.700.0" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Stylistic lints that don't reflect bugs. Tracked for gradual
# cleanup; allowed for now so CI -D warnings is meaningful for the
# lints that do indicate bugs (correctness, suspicious, perf).
doc_lazy_continuation = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
double_must_use = "allow"
empty_line_after_doc_comments = "allow"
cloned_ref_to_slice_refs = "allow"
nonminimal_bool = "allow"
ptr_arg = "allow"
unnecessary_sort_by = "allow"
collapsible_match = "allow"
