[package]
name = "vela-atlas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vela Atlas layer: a living, versioned map of a scientific domain composed of one or more Vela frontiers. The Atlas primitive is Carina v0.4. This crate carries the typed AtlasManifest, the materialize_atlas() function that builds a read-only snapshot over composing frontiers, and the CLI-side Atlas commands."
documentation = "https://github.com/vela-science/vela/blob/main/docs/MISSION_ATLAS.md"
keywords = ["vela", "science", "atlas", "frontier"]
categories = ["science"]
readme = "README.md"
publish = true

[dependencies]
vela-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
