[package]
name = "vela-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The vela command-line tool: build, check, sign, replay, and publish scientific frontier state."
readme = "../../README.md"
keywords = ["science", "frontier", "protocol", "cli", "replay"]
categories = ["science", "command-line-utilities"]
publish = true

# The `vela` command-line binary. Lives in its own crate (instead of
# alongside the substrate lib) so it can depend on both the substrate
# crate (`vela-protocol`) and the agent crate (`vela-scientist`)
# without inducing a cyclic Cargo dependency.
#
# The lib stays a pure substrate library; agent behaviour is wired
# in here at startup via `register_scout_handler`.

[lib]
name = "vela_cli"
path = "src/lib.rs"

[[bin]]
name = "vela"
path = "src/main.rs"

[dependencies]
vela-protocol = { workspace = true }
vela-protocol-core = { workspace = true }
vela-edge = { path = "../vela-edge" }
vela-verify = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_yaml = { workspace = true }
colored = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
# Deps for the relocated CLI / serve / workbench surface (formerly in
# vela-protocol). The binary owns these app concerns: argument parsing,
# the local HTTP server + client, signing.
clap = { workspace = true }
clap_complete = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
# Pure-Rust CDCL SAT solver (no C deps): the structured-search backend for the
# discovery portfolio. The solver only PRODUCES candidates; the frozen
# vela-verify re-checks every witness, so trust stays the verifier.
splr = "0.17"

[lints]
workspace = true
