[package]
name = "vela-constellation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vela Constellation layer: a network of connected Atlases across scientific domains. The sixteenth Carina primitive (v0.5). Composes one or more Atlases (vat_*) into a higher-level cross-domain map; cross-Atlas bridges live as the Atlas's own bridges where bridge endpoints land in different composing Atlases. Atlas stays the unit of reviewer-confirmed bridges; Constellation is read-only over per-Atlas snapshots."
documentation = "https://github.com/vela-science/vela/blob/main/docs/MISSION_ATLAS.md"
keywords = ["vela", "science", "constellation", "atlas"]
categories = ["science"]
readme = "README.md"
publish = true

[dependencies]
vela-atlas.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
