[package]
name = "vela-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for the Vela scientific knowledge protocol: replayable frontier state, signed canonical events, and proof packets."
readme = "../../README.md"
keywords = ["science", "frontier", "protocol", "ed25519", "replay"]
categories = ["science", "data-structures", "cryptography"]
publish = true

[lib]
name = "vela_protocol"
path = "src/lib.rs"

# v0.22 (Agent Inbox): the `vela` CLI lives in `crates/vela-cli` so
# it can depend on both vela-protocol (substrate) and vela-scientist
# (agents) without inducing a cyclic Cargo dependency. The library
# in this crate stays a pure substrate library.

[features]
test-support = []

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
chrono.workspace = true
hex.workspace = true
colored.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
unicode-normalization.workspace = true
rand.workspace = true
toml.workspace = true
tempfile.workspace = true

[dev-dependencies]

[lints]
workspace = true
