[package]
name = "vela-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://github.com/vela-science/vela/blob/main/docs/RELAY.md"
description = "Vela Relay: the adapter layer that turns papers, agent runtime artifacts, hypothesis discourse, and review packets into Vela proposals. Library re-exports the four adapter-shape types from vela-protocol; the bundled `vela-relay` binary lists the four shapes and points at the canonical Vela CLI subcommands that implement each."
readme = "README.md"
keywords = ["vela", "science", "relay", "carina", "adapter"]
categories = ["science"]
publish = true

[lib]
name = "vela_relay"
path = "src/lib.rs"

[[bin]]
name = "vela-relay"
path = "src/main.rs"

[dependencies]
vela-protocol = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
# v0.142: paper-to-vela end-to-end. Calls the same four upstreams
# the substrate's Bridge-kit cross-check uses (Crossref, PubMed,
# Semantic Scholar, ArXiv) and produces a minimal `vpr_*` proposal
# envelope. The substrate's verifier logic in `vela-protocol`
# remains the source of truth; the relay binary is intentionally
# light so the discoverable surface stays simple.
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[lints]
workspace = true
